# string_art

./: .gitignore  README.md  analytical_radon_string.py  introduction.ipynb  pyproject.toml  radon_skimage.py  radon_test.py  radon_transformed_line.py  requirements.txt  string_radon.py  test.py  warp_test.py
.github/workflows/: smoke_test.yaml
data/inputs/: preprocessed_cat_img.mat
docs/: Hook diagonal string computation.drawio
examples/: example.py  minimal_test.py  naive.py  naive_example.py  naive_greedy.py  radon_animation.py  radon_comparison.py  radon_example.py  radon_transform.py  reproduce_matlab_results.py  smoke_test.py
matlab/: analytic_radon_line.py  plot_line.py  radon_animation.py  radon_comparison.py  stringArt.m  string_reconstruction_radon.py  test_analytical_radon_line.py
src/string_art/: analytical_radon_line.py  edges.py  pins.py  string_reconstruction_radon.py  utils.py
string_art/: XiaoLinWu.py  __init__.py  analytical_radon_line.py  api.py  build_arc_adjacency_matrix.py  config.py  config_validator.py  edges.py  hook.py  line.py  line_profile.py  pin.py  pins.py  plots.py  preprocess_image.py  run.py  string_reconstruction_radon.py  strings.py  test_edges.py
string_art/entities/: __init__.py  connection_type.py  edge.py  line.py  pin.py  pin_factory.py  place_pins.py  string.py
tests/: test_adapt_thread_thickness.py  test_analytical_radon_line.py  test_edges.py  test_edges_radon_parameter_based.py  test_image_resizing.py  test_matlab_string_matrices.py  test_xiaolinwu.py  visualize_resolutions.py  visualize_string_computation.py
(+97 files in other folders)
